Working on lighting toggle, currently having issues getting around the cert with axios, very rudementary at the moment, only turns on, will work to change that with some form of state machine or a request that gets the current value of the lights in the house.

--- a/renderer/index.html
+++ b/renderer/index.html
@@ -10,5 +10,8 @@
 </head>
 <body>
     <h1>Foundation Controller</h1>
+    <form id="light-form" class="hidden">
+        <button type="submit">Light</button>
+    </form>
 </body>
 </html>
