Moved files around, got lighting functionality working, need to get discovery up and going to find other devices on the network.

--- a/renderer/index.html
+++ b/renderer/index.html
@@ -6,10 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="../js/jquery-3.7.0.min.js"></script>
     <script src="../js/renderer.js" defer></script>
+    <script src="../js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="./css/bootstrap.min.css">
     <title>Foundation Controller</title>
 </head>
 <body>
     <h1>Foundation Controller</h1>
+    <form id="light-refresh">
+        <button type="submit">Refresh</button>
+    </form>
     <form id="light-form" class="hidden">
         <button type="submit">Light</button>
     </form>
