--- a/renderer/index.html
+++ b/renderer/index.html
@@ -1,22 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self';">
+    <meta http-equiv="Content-Security-Policy" 
+    content="default-src 'self'; 
+    script-src 'self';
+    font-src 'self' https://fonts.gstatic.com;
+    style-src 'self' https://fonts.googleapis.com">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="../js/jquery-3.7.0.min.js"></script>
     <script src="../js/renderer.js" defer></script>
     <script src="../js/bootstrap.min.js"></script>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
     <link rel="stylesheet" href="./css/bootstrap.min.css">
+    <link rel="stylesheet" href="./css/styles.css">
     <title>Foundation Controller</title>
 </head>
-<body>
-    <h1>Foundation Controller</h1>
-    <form id="light-refresh">
-        <button type="submit">Refresh</button>
-    </form>
-    <form id="light-form" class="hidden">
-        <button type="submit">Light</button>
-    </form>
+<body class="bg-dark">
+    <h1 class="text-center p-5 text-light">Foundation Controller</h1>
+    <div class="container">
+        <div class="row justify-content-center">
+            <form id="light-refresh">
+                <button class="btn3d btn btn-primary" type="submit"><span class="material-icons">refresh</span><br>Load Lights</button>
+            </form>
+        </div>
+        <div class="row justify-content-center">
+            <form id="light-form" class="hidden">
+                <button class="btn3d btn btn-danger" type="submit"><span class="material-icons">lightbulb</span><br>Light 1</button>
+            </form>
+        </div>
+    </div>
 </body>
 </html>
